--- a/client/src/app/post-details/template.html
+++ b/client/src/app/post-details/template.html
@@ -1,17 +1,17 @@
-<div class="post-details">
-  <div class="post-title">
-    {{ post.title }}
-  </div>
-  <div class="post-date">
-    <span class="pref">Created: </span>{{ post.createdAt | date }}
-  </div>
-  <div class="post-author">
-    <span class="pref">Author: </span>{{ post.author }}
-  </div>
-  <div class="post-body">
+<mat-card class="post-details">
+  <mat-card-header>
+    <mat-card-title class="">
+      <a routerLink="/posts/{{post.id}}">{{ post.title }}</a>
+    </mat-card-title>
+    <mat-card-subtitle>
+      <span class="pref">Author: </span>{{ post.author }}
+      <span class="pref">Created: </span>{{ post.createdAt | date }}
+    </mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-content>
     {{ post.body }}
-  </div>
-  <div class="post-comments">
+  </mat-card-content>
+  <mat-card-footer>
     <h4>Comments:</h4>
     <div *ngFor="let comm of comments" class="post-comm">
       <div class="post-comm-author">
@@ -20,24 +20,30 @@
       <div class="post-comm-text">
         {{ comm.text}}
       </div>
-
+      <!-- <mat-divider [inset]="true"></mat-divider> -->
     </div>
+  </mat-card-footer>
+</mat-card>
 
-  </div>
-  <form class="create-comment-place" (submit)="submitComment($event)">
-    <div class="">
-      <label>
-        <span>Your name</span>
-        <input type="text" [(ngModel)]="comment.author" name="author">
-      </label>
-    </div>
-    <div class="line">
-      <label>
-        <span>Text</span>
-        <textarea [(ngModel)]="comment.text" name="text"></textarea>
-      </label>
-    </div>
-    <button class="btn-g line">Add comment</button>
-
-  </form>
-</div>
+<mat-card>
+<form class="create-comment-place" (submit)="submitComment($event)">
+  <mat-form-field>
+    <input
+      matInput
+      [(ngModel)]="comment.author"
+      placeholder="Your name"
+      value=""
+      name="author"
+    >
+  </mat-form-field>
+  <mat-form-field class="example-full-width">
+    <textarea
+      matInput
+      [(ngModel)]="comment.text"
+      placeholder="Leave a comment"
+      name="text"
+    ></textarea>
+  </mat-form-field>
+  <button class="btn-g line">Add comment</button>
+</form>
+</mat-card>
