--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -3,6 +3,9 @@
     <h1>Блог - тестовое задание</h1>
   </a>
 </header>
+<div>
+  {{ apiService?.state?.nested.nest.o }}
+</div>
 
 <main class="main">
   <router-outlet></router-outlet>
